--- a/Eatrition/app/src/main/res/layout/activity_main.xml
+++ b/Eatrition/app/src/main/res/layout/activity_main.xml
@@ -25,14 +25,19 @@
         android:padding="10dp"
         android:text="Get Location"
         tools:ignore="MissingConstraints" />
+    -->
+
 
     <TextView
         android:id="@+id/tv_result"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
+        android:textColor="#C80A0A"
+        app:layout_constraintBottom_toBottomOf="@+id/recyclerView_main"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         tools:ignore="MissingConstraints" />
-    -->
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView_main"
